# weekly-releases

./: .coverage  .gitignore  AGENTS.md  README.md  pyproject.toml  specs.md
.github/workflows/: weekly-scan.yml
docs/: index.html
docs/2026/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  30.html  calendar-2026-01.html  calendar-2026-02.html  calendar-2026-03.html  calendar-2026-04.html  calendar-2026-05.html  calendar-2026-06.html  calendar-2026-07.html
releases/: index.html
releases/2026/: 01.html  02.html  04.html  05.html  07.html  08.html  11.html  13.html  15.html  16.html  18.html  19.html
tests/: test_cli.py  test_description_text.py  test_github_auth.py  test_grouping.py  test_landscape.py  test_landscape_load.py  test_models.py  test_resolution.py  test_runner.py  test_runner_github_403.py  test_sources.py  test_storage.py  test_timebox.py
weekly_releases/: __init__.py  cli.py  description_text.py  github_auth.py  grouping.py  landscape.py  models.py  resolution.py  runner.py  sources.py  storage.py  timebox.py
