[project]
name = "weekly-releases"
version = "0.1.0"
description = "Weekly FINOS release crawler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
weekly-releases = "weekly_releases.cli:app"

[tool.pytest.ini_options]
addopts = "--cov=weekly_releases --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
