[project]
name = "weekly-releases"
version = "0.1.0"
description = "Weekly FINOS release crawler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "black>=24.10.0",
]

[project.scripts]
weekly-releases = "weekly_releases.cli:app"

[tool.pytest.ini_options]
addopts = "--cov=weekly_releases --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["weekly_releases", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"weekly_releases/cli.py" = ["B008"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
